--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
 .App {
-  text-align: center;
+  background-color: #ffffff;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.signInUi {
   display: flex;
-  flex-direction: column;
+  padding: 6%;
+}
+
+.signInUi_image {
+  width: 50%;
+  display: flex;
   align-items: center;
+
+
+}
+.signInUi_image>img{
+  margin: auto;
+  height: 70%;
+}
+
+.signInBox {
+  width: 540px;
+  height: 570px;
+  background: #FFFFFF;
+  border: 2px solid rgba(26, 59, 88, 0.24);
+  border-radius: 65px;
+}
+
+.selectSignInType {
+  height: 20%;
+}
+
+.selectSignInType>button {
+  margin-top: 50px;
+  margin-left: 40px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 101.1%;
+  border: none;
+  color: rgba(26, 59, 88, 0.33);
+  background: none;
+  font-family: poppins;
+}
+.selectSignInType>button.highlight{
+  color: #1A3B58;
+  border-bottom: 5px solid #1A3B58;
+}
+
+.signInComponent{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
